@startuml

title __ML_FOR_ALL.APP's Class Diagram__\n

  namespace com.example.mlforall {
    class com.example.mlforall.AboutActivity {
    }
  }
  

  namespace com.example.mlforall {
    class com.example.mlforall.BuildConfig {
    }
  }
  

  namespace com.example.mlforall {
    class com.example.mlforall.CreateMachineLearningModelActivity {
    }
  }
  

  namespace com.example.mlforall {
    class com.example.mlforall.DatabaseHelper {
    }
  }
  

  namespace com.example.mlforall {
    class com.example.mlforall.DialogHelper {
    }
  }
  

  namespace com.example.mlforall {
    class com.example.mlforall.FileHelper {
    }
  }
  

  namespace com.example.mlforall {
    class com.example.mlforall.LinearEquation {
    }
  }
  

  namespace com.example.mlforall {
    class com.example.mlforall.LinearRegression {
    }
  }
  

  namespace com.example.mlforall {
    class com.example.mlforall.LinearRegressionHelper {
    }
  }
  

  namespace com.example.mlforall {
    class com.example.mlforall.MachineLearningModel {
    }
  }
  

  namespace com.example.mlforall {
    class com.example.mlforall.MainActivity {
    }
  }
  

  namespace com.example.mlforall {
    class com.example.mlforall.MenuHelper {
    }
  }
  

  namespace com.example.mlforall {
    class com.example.mlforall.MyModelsActivity {
    }
  }
  

  namespace com.example.mlforall {
    class com.example.mlforall.MyModelsListViewAdapter {
    }
  }
  

  namespace com.example.mlforall {
    class com.example.mlforall.MyProfileActivity {
    }
  }
  

  namespace com.example.mlforall {
    class com.example.mlforall.PlottingHelper {
    }
  }
  

  namespace com.example.mlforall {
    class com.example.mlforall.ShowModelActivity {
    }
  }
  

  namespace com.example.mlforall {
    class com.example.mlforall.User {
    }
  }
  

  com.example.mlforall.AboutActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.mlforall.AboutActivity o-- com.example.mlforall.DatabaseHelper : db
  com.example.mlforall.AboutActivity o-- com.example.mlforall.MenuHelper : menuHelper
  com.example.mlforall.CreateMachineLearningModelActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.mlforall.CreateMachineLearningModelActivity o-- com.example.mlforall.DatabaseHelper : db
  com.example.mlforall.CreateMachineLearningModelActivity o-- com.example.mlforall.LinearEquation : equation
  com.example.mlforall.CreateMachineLearningModelActivity o-- com.example.mlforall.MenuHelper : menuHelper
  com.example.mlforall.CreateMachineLearningModelActivity o-- com.example.mlforall.LinearRegression : model
  com.example.mlforall.DatabaseHelper -up-|> android.database.sqlite.SQLiteOpenHelper
  com.example.mlforall.DialogHelper o-- com.example.mlforall.DatabaseHelper : db
  com.example.mlforall.LinearRegression o-- com.example.mlforall.LinearEquation : linearEquation
  com.example.mlforall.MachineLearningModel o-- com.example.mlforall.LinearEquation : linearEquation
  com.example.mlforall.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.mlforall.MainActivity o-- com.example.mlforall.DatabaseHelper : db
  com.example.mlforall.MainActivity o-- com.example.mlforall.MenuHelper : menuHelper
  com.example.mlforall.MenuHelper o-- com.example.mlforall.DatabaseHelper : db
  com.example.mlforall.MenuHelper o-- com.example.mlforall.DialogHelper : dialogHelper
  com.example.mlforall.MyModelsActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.mlforall.MyModelsActivity o-- com.example.mlforall.MyModelsListViewAdapter : adapter
  com.example.mlforall.MyModelsActivity o-- com.example.mlforall.DatabaseHelper : db
  com.example.mlforall.MyModelsActivity o-- com.example.mlforall.MenuHelper : menuHelper
  com.example.mlforall.MyModelsListViewAdapter -up-|> android.widget.BaseAdapter
  com.example.mlforall.MyProfileActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.mlforall.MyProfileActivity o-- com.example.mlforall.DatabaseHelper : db
  com.example.mlforall.MyProfileActivity o-- com.example.mlforall.MenuHelper : menuHelper
  com.example.mlforall.ShowModelActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.mlforall.ShowModelActivity o-- com.example.mlforall.PlottingHelper : plottingHelper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
